Implementado el efecto de las balas con patrón Strategy

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -135,6 +135,9 @@
     <ClCompile Include="AmmoPackage.cpp" />
     <ClCompile Include="AmmoViewer.cpp" />
     <ClCompile Include="AnimatedImageUI.cpp" />
+    <ClCompile Include="BomberGun.cpp" />
+    <ClCompile Include="BulletEffect.cpp" />
+    <ClCompile Include="EffectInterface.cpp" />
     <ClCompile Include="FramedImageUI.cpp" />
     <ClCompile Include="AnimatedSpriteComponent.cpp" />
     <ClCompile Include="Arm.cpp" />
@@ -145,8 +148,7 @@
     <ClCompile Include="BasicShotgun.cpp" />
     <ClCompile Include="BodyComponent.cpp" />
     <ClCompile Include="BounceOrbCannon.cpp" />
-    <ClCompile Include="BouncingBullet.cpp" />
-    <ClCompile Include="BouncingBulletPool.cpp" />
+    <ClCompile Include="BouncingBulletEffect.cpp" />
     <ClCompile Include="BomberEnemy.cpp" />
     <ClCompile Include="BulletPool.cpp" />
     <ClCompile Include="Capsule.cpp" />
@@ -156,19 +158,17 @@
     <ClCompile Include="DistanceEnemy.cpp" />
     <ClCompile Include="EnemyArm.cpp" />
     <ClCompile Include="GravityBombCannon.cpp" />
-    <ClCompile Include="GravityBullet.cpp" />
-    <ClCompile Include="GravityBulletPool.cpp" />
+    <ClCompile Include="GravityBulletEffect.cpp" />
     <ClCompile Include="ImprovedRifle.cpp" />
     <ClCompile Include="ImprovedShotgun.cpp" />
     <ClCompile Include="ExplosiveBulletPool.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="Map.cpp" />
-    <ClCompile Include="ExplosiveBullet.cpp" />
+    <ClCompile Include="ExplosiveBulletEffect.cpp" />
     <ClCompile Include="FlyingEnemy.cpp" />
     <ClCompile Include="MovingComponent.cpp" />
     <ClCompile Include="Melee.cpp" />
-    <ClCompile Include="PiercingBulletPool.cpp" />
-    <ClCompile Include="PiercingBullet.cpp" />
+    <ClCompile Include="PiercingBulletEffect.cpp" />
     <ClCompile Include="PlasmaSniper.cpp" />
     <ClCompile Include="PlayerArm.cpp" />
     <ClCompile Include="ArmControllerComponent.cpp" />
@@ -235,6 +235,9 @@
     <ClInclude Include="AmmoPackage.h" />
     <ClInclude Include="AmmoViewer.h" />
     <ClInclude Include="AnimatedImageUI.h" />
+    <ClInclude Include="BomberGun.h" />
+    <ClInclude Include="BulletEffect.h" />
+    <ClInclude Include="EffectInterface.h" />
     <ClInclude Include="FramedImageUI.h" />
     <ClInclude Include="AnimatedSpriteComponent.h" />
     <ClInclude Include="AnyarothError.h" />
@@ -246,8 +249,7 @@
     <ClInclude Include="BasicShotgun.h" />
     <ClInclude Include="BodyComponent.h" />
     <ClInclude Include="BounceOrbCannon.h" />
-    <ClInclude Include="BouncingBullet.h" />
-    <ClInclude Include="BouncingBulletPool.h" />
+    <ClInclude Include="BouncingBulletEffect.h" />
     <ClInclude Include="BomberEnemy.h" />
     <ClInclude Include="Capsule.h" />
     <ClInclude Include="Cursor.h" />
@@ -256,21 +258,19 @@
     <ClInclude Include="DistanceEnemy.h" />
     <ClInclude Include="EnemyArm.h" />
     <ClInclude Include="GravityBombCannon.h" />
-    <ClInclude Include="GravityBullet.h" />
-    <ClInclude Include="GravityBulletPool.h" />
+    <ClInclude Include="GravityBulletEffect.h" />
     <ClInclude Include="GunType_def.h" />
     <ClInclude Include="ImprovedRifle.h" />
     <ClInclude Include="ImprovedShotgun.h" />
     <ClInclude Include="ExplosiveBulletPool.h" />
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="Map.h" />
-    <ClInclude Include="ExplosiveBullet.h" />
+    <ClInclude Include="ExplosiveBulletEffect.h" />
     <ClInclude Include="FlyingEnemy.h" />
     <ClInclude Include="MovingComponent.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Melee.h" />
-    <ClInclude Include="PiercingBulletPool.h" />
-    <ClInclude Include="PiercingBullet.h" />
+    <ClInclude Include="PiercingBulletEffect.h" />
     <ClInclude Include="PlasmaSniper.h" />
     <ClInclude Include="PlayerArm.h" />
     <ClInclude Include="ArmControllerComponent.h" />
