--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -208,9 +208,6 @@
     <ClCompile Include="Melee.cpp">
       <Filter>Archivos de código fuente\Objects\Melee</Filter>
     </ClCompile>
-    <ClCompile Include="ExplosiveBullet.cpp">
-      <Filter>Archivos de código fuente\Objects\Bullets</Filter>
-    </ClCompile>
     <ClCompile Include="Bullet.cpp">
       <Filter>Archivos de código fuente\Objects\Bullets</Filter>
     </ClCompile>
@@ -274,26 +271,31 @@
     <ClCompile Include="WeaponManager.cpp">
       <Filter>Archivos de código fuente\Guns</Filter>
     </ClCompile>
-    <ClCompile Include="BouncingBulletPool.cpp">
-      <Filter>Archivos de código fuente\Pools</Filter>
-    </ClCompile>
-    <ClCompile Include="PiercingBulletPool.cpp">
-      <Filter>Archivos de código fuente\Pools</Filter>
-    </ClCompile>
-    <ClCompile Include="BouncingBullet.cpp">
-      <Filter>Archivos de código fuente\Objects\Bullets</Filter>
-    </ClCompile>
-    <ClCompile Include="PiercingBullet.cpp">
-      <Filter>Archivos de código fuente\Objects\Bullets</Filter>
-    </ClCompile>
-    <ClCompile Include="GravityBullet.cpp" />
-    <ClCompile Include="GravityBulletPool.cpp" />
     <ClCompile Include="PlasmaSniper.cpp">
       <Filter>Archivos de código fuente\Guns</Filter>
     </ClCompile>
     <ClCompile Include="GravityBombCannon.cpp">
       <Filter>Archivos de código fuente\Guns</Filter>
     </ClCompile>
+    <ClCompile Include="BouncingBulletEffect.cpp">
+      <Filter>Archivos de código fuente\Objects\Bullets</Filter>
+    </ClCompile>
+    <ClCompile Include="PiercingBulletEffect.cpp">
+      <Filter>Archivos de código fuente\Objects\Bullets</Filter>
+    </ClCompile>
+    <ClCompile Include="BulletEffect.cpp">
+      <Filter>Archivos de código fuente\Objects\Bullets\Effects</Filter>
+    </ClCompile>
+    <ClCompile Include="EffectInterface.cpp">
+      <Filter>Archivos de código fuente\Objects\Bullets\Effects</Filter>
+    </ClCompile>
+    <ClCompile Include="GravityBulletEffect.cpp">
+      <Filter>Archivos de código fuente\Objects\Bullets\Effects</Filter>
+    </ClCompile>
+    <ClCompile Include="ExplosiveBulletEffect.cpp">
+      <Filter>Archivos de código fuente\Objects\Bullets\Effects</Filter>
+    </ClCompile>
+    <ClCompile Include="BomberGun.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -503,9 +505,6 @@
     <ClInclude Include="Bullet.h">
       <Filter>Archivos de encabezado\Objects\Bullets</Filter>
     </ClInclude>
-    <ClInclude Include="ExplosiveBullet.h">
-      <Filter>Archivos de encabezado\Objects\Bullets</Filter>
-    </ClInclude>
     <ClInclude Include="UIElement.h">
       <Filter>Archivos de encabezado\HUD\UIElements</Filter>
     </ClInclude>
@@ -587,31 +586,40 @@
     <ClInclude Include="WeaponManager.h">
       <Filter>Archivos de encabezado\Guns</Filter>
     </ClInclude>
-    <ClInclude Include="BouncingBullet.h">
+    <ClInclude Include="Bullet.h">
       <Filter>Archivos de encabezado\Objects\Bullets</Filter>
     </ClInclude>
     <ClInclude Include="Bullet.h">
       <Filter>Archivos de encabezado\Objects\Bullets</Filter>
     </ClInclude>
-    <ClInclude Include="BouncingBulletPool.h">
-      <Filter>Archivos de encabezado\Pools</Filter>
-    </ClInclude>
-    <ClInclude Include="PiercingBullet.h">
-      <Filter>Archivos de encabezado\Objects\Bullets</Filter>
-    </ClInclude>
-    <ClInclude Include="Bullet.h">
-      <Filter>Archivos de encabezado\Objects\Bullets</Filter>
-    </ClInclude>
-    <ClInclude Include="PiercingBulletPool.h">
-      <Filter>Archivos de encabezado\Pools</Filter>
-    </ClInclude>
-    <ClInclude Include="GravityBullet.h" />
-    <ClInclude Include="GravityBombCannon.h" />
-    <ClInclude Include="GravityBulletPool.h" />
     <ClInclude Include="GunType_def.h">
       <Filter>Archivos de encabezado\Guns</Filter>
     </ClInclude>
-    <ClInclude Include="PlasmaSniper.h" />
+    <ClInclude Include="PiercingBulletEffect.h">
+      <Filter>Archivos de encabezado\Objects\Bullets</Filter>
+    </ClInclude>
+    <ClInclude Include="BulletEffect.h">
+      <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
+    </ClInclude>
+    <ClInclude Include="EffectInterface.h">
+      <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
+    </ClInclude>
+    <ClInclude Include="PlasmaSniper.h">
+      <Filter>Archivos de encabezado\Guns</Filter>
+    </ClInclude>
+    <ClInclude Include="GravityBombCannon.h">
+      <Filter>Archivos de encabezado\Guns</Filter>
+    </ClInclude>
+    <ClInclude Include="BouncingBulletEffect.h">
+      <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
+    </ClInclude>
+    <ClInclude Include="GravityBulletEffect.h">
+      <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
+    </ClInclude>
+    <ClInclude Include="ExplosiveBulletEffect.h">
+      <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
+    </ClInclude>
+    <ClInclude Include="BomberGun.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de código fuente">
@@ -745,6 +753,12 @@
     </Filter>
     <Filter Include="Archivos de encabezado\Objects\Bullets">
       <UniqueIdentifier>{1d363188-42c1-4860-abb0-ffa5e1951368}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Objects\Bullets\Effects">
+      <UniqueIdentifier>{a430f602-f715-4f8b-82fc-21d64a898b84}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de código fuente\Objects\Bullets\Effects">
+      <UniqueIdentifier>{b37572f8-ba64-42de-8268-252b98c74512}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
