--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -277,12 +277,6 @@
     <ClCompile Include="BouncingBullet.cpp">
       <Filter>Archivos de código fuente\Objects\Bullets</Filter>
     </ClCompile>
-    <ClCompile Include="ShopItem.cpp">
-      <Filter>Archivos de código fuente</Filter>
-    </ClCompile>
-    <ClCompile Include="ShopMenu.cpp">
-      <Filter>Archivos de código fuente</Filter>
-    </ClCompile>
     <ClCompile Include="Boss1.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies\Bosses</Filter>
     </ClCompile>
@@ -313,13 +307,21 @@
     <ClCompile Include="GroundEnemy.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies</Filter>
     </ClCompile>
-    <ClCompile Include="DepotPanel.cpp">
-      <Filter>Archivos de código fuente</Filter>
-    </ClCompile>
     <ClCompile Include="CatalogPanel.cpp">
-      <Filter>Archivos de código fuente</Filter>
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
     </ClCompile>
-    <ClCompile Include="ShopInfoPanel.cpp" />
+    <ClCompile Include="DepotPanel.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopItem.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopMenu.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopInfoPanel.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -649,19 +651,21 @@
     <ClInclude Include="CustomAnimatedSpriteComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
+    <ClInclude Include="CatalogPanel.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
     <ClInclude Include="DepotPanel.h">
-      <Filter>Archivos de encabezado</Filter>
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
     </ClInclude>
     <ClInclude Include="ShopItem.h">
-      <Filter>Archivos de encabezado</Filter>
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
     </ClInclude>
     <ClInclude Include="ShopMenu.h">
-      <Filter>Archivos de encabezado</Filter>
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
     </ClInclude>
-    <ClInclude Include="CatalogPanel.h">
-      <Filter>Archivos de encabezado</Filter>
+    <ClInclude Include="ShopInfoPanel.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
     </ClInclude>
-    <ClInclude Include="ShopInfoPanel.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de código fuente">
@@ -807,6 +811,12 @@
     </Filter>
     <Filter Include="Archivos de código fuente\Objects\Player\Melee">
       <UniqueIdentifier>{91c2fb3e-33b4-42c8-b741-0a0b383c9988}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de código fuente\HUD\Shop">
+      <UniqueIdentifier>{93a4bdeb-77ab-4265-987e-3e2cd47fb709}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\HUD\Shop">
+      <UniqueIdentifier>{98f6078b-0801-4341-9855-68e44a28fd4c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
