--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -135,6 +135,10 @@
     <ClCompile Include="AmmoPackage.cpp" />
     <ClCompile Include="AmmoViewer.cpp" />
     <ClCompile Include="AnimatedImageUI.cpp" />
+    <ClCompile Include="BomberGun.cpp" />
+    <ClCompile Include="BossOrbCannon.cpp" />
+    <ClCompile Include="BulletEffect.cpp" />
+    <ClCompile Include="EffectInterface.cpp" />
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="Capsule.cpp" />
     <ClCompile Include="FramedImageUI.cpp" />
@@ -147,8 +151,7 @@
     <ClCompile Include="BasicShotgun.cpp" />
     <ClCompile Include="BodyComponent.cpp" />
     <ClCompile Include="BounceOrbCannon.cpp" />
-    <ClCompile Include="BouncingBullet.cpp" />
-    <ClCompile Include="BouncingBulletPool.cpp" />
+    <ClCompile Include="BouncingBulletEffect.cpp" />
     <ClCompile Include="BomberEnemy.cpp" />
     <ClCompile Include="Boss1.cpp" />
     <ClCompile Include="BotonLanzaMisiles.cpp" />
@@ -159,21 +162,23 @@
     <ClCompile Include="DialogueTextUI.cpp" />
     <ClCompile Include="DistanceEnemy.cpp" />
     <ClCompile Include="EnemyArm.cpp" />
+    <ClCompile Include="GravityBombCannon.cpp" />
+    <ClCompile Include="GravityBombDebuff.cpp" />
+    <ClCompile Include="GravityBulletEffect.cpp" />
     <ClCompile Include="Interactable.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="ImprovedRifle.cpp" />
     <ClCompile Include="ImprovedShotgun.cpp" />
-    <ClCompile Include="ExplosiveBulletPool.cpp" />
     <ClCompile Include="GroundEnemy.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="Map.cpp" />
-    <ClCompile Include="ExplosiveBullet.cpp" />
+    <ClCompile Include="ExplosiveBulletEffect.cpp" />
     <ClCompile Include="FlyingEnemy.cpp" />
     <ClCompile Include="MisilBoss1.cpp" />
     <ClCompile Include="MovingComponent.cpp" />
     <ClCompile Include="Melee.cpp" />
-    <ClCompile Include="PiercingBulletPool.cpp" />
-    <ClCompile Include="PiercingBullet.cpp" />
+    <ClCompile Include="PiercingBulletEffect.cpp" />
+    <ClCompile Include="PlasmaSniper.cpp" />
     <ClCompile Include="PlayerArm.cpp" />
     <ClCompile Include="BossPanel.cpp" />
     <ClCompile Include="Bullet.cpp" />
@@ -237,6 +242,10 @@
     <ClInclude Include="AmmoPackage.h" />
     <ClInclude Include="AmmoViewer.h" />
     <ClInclude Include="AnimatedImageUI.h" />
+    <ClInclude Include="BomberGun.h" />
+    <ClInclude Include="BossOrbCannon.h" />
+    <ClInclude Include="BulletEffect.h" />
+    <ClInclude Include="EffectInterface.h" />
     <ClInclude Include="Boss.h" />
     <ClInclude Include="CapsuleDistance.h" />
     <ClInclude Include="CapsuleNormal.h" />
@@ -252,8 +261,7 @@
     <ClInclude Include="BasicShotgun.h" />
     <ClInclude Include="BodyComponent.h" />
     <ClInclude Include="BounceOrbCannon.h" />
-    <ClInclude Include="BouncingBullet.h" />
-    <ClInclude Include="BouncingBulletPool.h" />
+    <ClInclude Include="BouncingBulletEffect.h" />
     <ClInclude Include="BomberEnemy.h" />
     <ClInclude Include="Boss1.h" />
     <ClInclude Include="BotonLanzaMisiles.h" />
@@ -264,14 +272,17 @@
     <ClInclude Include="DialogueTextUI.h" />
     <ClInclude Include="DistanceEnemy.h" />
     <ClInclude Include="EnemyArm.h" />
+    <ClInclude Include="GravityBombCannon.h" />
+    <ClInclude Include="GravityBombDebuff.h" />
+    <ClInclude Include="GravityBulletEffect.h" />
+    <ClInclude Include="GunType_def.h" />
     <ClInclude Include="Interactable.h" />
     <ClInclude Include="ImprovedRifle.h" />
     <ClInclude Include="ImprovedShotgun.h" />
-    <ClInclude Include="ExplosiveBulletPool.h" />
     <ClInclude Include="GroundEnemy.h" />
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="Map.h" />
-    <ClInclude Include="ExplosiveBullet.h" />
+    <ClInclude Include="ExplosiveBulletEffect.h" />
     <ClInclude Include="FlyingEnemy.h" />
     <ClInclude Include="MisilBoss1.h" />
     <ClInclude Include="MovingComponent.h" />
@@ -279,8 +290,8 @@
     <ClInclude Include="NPC.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Melee.h" />
-    <ClInclude Include="PiercingBulletPool.h" />
-    <ClInclude Include="PiercingBullet.h" />
+    <ClInclude Include="PiercingBulletEffect.h" />
+    <ClInclude Include="PlasmaSniper.h" />
     <ClInclude Include="PlayerArm.h" />
     <ClInclude Include="BossPanel.h" />
     <ClInclude Include="Bullet.h" />
