--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -227,6 +227,7 @@
     <ClCompile Include="SpawnerEnemy.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="Money.cpp" />
+    <ClCompile Include="StaticFlyingEnemy.cpp" />
     <ClCompile Include="StaticSpawnerEnemy.cpp" />
     <ClCompile Include="TextUI.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -345,6 +346,7 @@
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="Money.h" />
+    <ClInclude Include="StaticFlyingEnemy.h" />
     <ClInclude Include="StaticSpawnerEnemy.h" />
     <ClInclude Include="TextUI.h" />
     <ClInclude Include="Texture.h" />
