--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -316,6 +316,9 @@
     <ClCompile Include="GravityBombDebuff.cpp">
       <Filter>Archivos de código fuente\Objects\Bullets\Effects</Filter>
     </ClCompile>
+    <ClCompile Include="StaticFlyingEnemy.cpp">
+      <Filter>Archivos de código fuente\Objects\Enemies\DistanceEnemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -665,6 +668,9 @@
     </ClInclude>
     <ClInclude Include="GravityBombDebuff.h">
       <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
+    </ClInclude>
+    <ClInclude Include="StaticFlyingEnemy.h">
+      <Filter>Archivos de encabezado\Objects\Enemies\DistanceEnemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
